@@ -1,6 +1,0 @@
-$NetBSD: distinfo,v 1.3 2015/11/03 03:29:04 agc Exp $
-
-SHA1 (psvn-25241/psvn.el) = c69176ca42cf5dc2405f76f0f2b2d2186c2b5fb6
-RMD160 (psvn-25241/psvn.el) = 6acfbf7a4a54374246a5570a34e8b233780e8ed1
-SHA512 (psvn-25241/psvn.el) = f2deba100dce47de0ca11693e6839e6b450e5a5bd1c7380f6c4fc64d26b915ef18c16f045d4eaef3e1062ddf7b0553ada5fcc2097fc092e27a04cd31acadb81e
-Size (psvn-25241/psvn.el) = 265675 bytes
